--- a/smart-calendar/backend/package.json
+++ b/smart-calendar/backend/package.json
@@ -1,29 +1,39 @@
 {
-  "name": "backend",
+  "name": "smart-calendar-backend",
   "version": "1.0.0",
-  "main": "dist/server.js",
+  "description": "Backend para Smart Calendar - Sistema de agenda inteligente",
+  "main": "src/server.js",
   "scripts": {
-    "dev": "tsx watch src/server.ts",
-    "build": "tsc",
     "start": "node dist/server.js",
-    "db:setup": "tsx src/scripts/setup-database.ts"
+    "dev": "ts-node src/server.ts",
+    "build": "tsc",
+    "migrate": "ts-node src/scripts/setup-database.ts"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "description": "",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
+    "compression": "^1.8.1",
     "cors": "^2.8.5",
-    "dotenv": "^17.2.3",
-    "express": "^5.1.0",
-    "pg": "^8.16.3"
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "express-rate-limit": "^7.1.5",
+    "express-validator": "^7.2.1",
+    "helmet": "^7.2.0",
+    "jsonwebtoken": "^9.0.2",
+    "pg": "^8.11.3"
   },
   "devDependencies": {
-    "@types/cors": "^2.8.19",
-    "@types/express": "^5.0.3",
-    "@types/node": "^24.7.0",
-    "@types/pg": "^8.15.5",
-    "tsx": "^4.20.6",
-    "typescript": "^5.9.3"
+    "@types/bcryptjs": "^2.4.6",
+    "@types/compression": "^1.8.1",
+    "@types/cors": "^2.8.17",
+    "@types/express": "^4.17.21",
+    "@types/express-validator": "^2.20.33",
+    "@types/helmet": "^0.0.48",
+    "@types/jsonwebtoken": "^9.0.10",
+    "@types/pg": "^8.10.9",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.3.3"
+  },
+  "engines": {
+    "node": ">=18.0.0"
   }
 }
