deploy: Configure for Render.com and Netlify deployment
🚀 Backend (Render.com):
- render.yaml configuration
- Production start script
- Environment variables setup
- PostgreSQL integration

🌐 Frontend (Netlify):
- netlify.toml configuration
- Production build optimization
- API URL configuration
- SPA routing setup

📚 Documentation:
- Complete deployment guide
- Troubleshooting steps
- Security configurations
- Environment setup

--- a/render.yaml
+++ b/render.yaml
@@ -3,9 +3,8 @@ services:
     name: smart-calendar-backend
     env: node
     plan: free
-    buildCommand: npm install && npm run build
-    startCommand: npm start
-    rootDir: smart-calendar/backend
+    buildCommand: cd smart-calendar/backend && npm install && npm run build
+    startCommand: cd smart-calendar/backend && npm start
     envVars:
       - key: NODE_ENV
         value: production
