--- a/smart-calendar/backend/package.json
+++ b/smart-calendar/backend/package.json
@@ -4,10 +4,11 @@
   "description": "Backend para Smart Calendar - Sistema de agenda inteligente",
   "main": "src/server.js",
   "scripts": {
-    "start": "node dist/server.js",
+    "start": "node start.js",
     "dev": "ts-node src/server.ts",
     "build": "tsc",
-    "migrate": "ts-node src/scripts/setup-database.ts"
+    "migrate": "ts-node src/scripts/setup-database.ts",
+    "postbuild": "node -e \"console.log('Build completed successfully')\""
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
