--- a/smart-calendar/netlify.toml
+++ b/smart-calendar/netlify.toml
@@ -1,9 +1,9 @@
 [build]
   publish = "dist/smart-calendar"
-  command = "npm install && ng build --configuration=production"
+  command = "npm install && npx ng build --configuration=production"
 
 [build.environment]
-  NODE_VERSION = "18"
+  NODE_VERSION = "20"
 
 [[redirects]]
   from = "/*"
