feat: Complete Smart Calendar implementation with Angular 18 + Node.js
- Backend: Express server with PostgreSQL, JWT auth, OAuth integration
- Frontend: Angular 18 with Material Design, responsive calendar UI
- Database: Complete schema with users, events, tasks, categories
- Security: RSA-256 JWT, rate limiting, input validation, CORS
- Theme: Unified SCSS system with glass morphism design
- Deploy: Ready for Render.com (backend) and Netlify (frontend)
- Features: Calendar views, event management, privacy settings, PWA ready

--- a/smart-calendar/netlify.toml
+++ b/smart-calendar/netlify.toml
@@ -1,6 +1,6 @@
 [build]
   publish = "dist/smart-calendar"
-  command = "npm install && npx ng build --configuration=production"
+  command = "npm install && npm install -g @angular/cli && ng build --configuration=production"
 
 [build.environment]
   NODE_VERSION = "20"
