fix: Update Netlify build configuration for Angular CLI

--- a/smart-calendar/netlify.toml
+++ b/smart-calendar/netlify.toml
@@ -1,9 +1,10 @@
 [build]
   publish = "dist/smart-calendar"
-  command = "npm install && npm install -g @angular/cli && ng build --configuration=production"
+  command = "npm install && npx ng build --configuration=production"
 
 [build.environment]
   NODE_VERSION = "20"
+  NPM_FLAGS = "--production=false"
 
 [[redirects]]
   from = "/*"
