--- a/smart-calendar/netlify.toml
+++ b/smart-calendar/netlify.toml
@@ -1,6 +1,6 @@
 [build]
   publish = "dist/smart-calendar"
-  command = "npm cli && npx ng build --configuration=production"
+  command = "npm ci && npx ng build --configuration=production"
 
 [build.environment]
   NODE_VERSION = "20"
