--- a/smart-calendar/backend/package.json
+++ b/smart-calendar/backend/package.json
@@ -7,7 +7,8 @@
     "start": "node start.js",
     "dev": "ts-node src/server.ts",
     "build": "tsc",
-    "migrate": "ts-node src/scripts/setup-database.ts",
+    "migrate": "node migrate.js",
+    "migrate-full": "ts-node src/scripts/setup-database.ts",
     "postbuild": "node -e \"console.log('Build completed successfully')\""
   },
   "dependencies": {
