feat: implement complete OAuth social login system
Frontend:
- Add Google and Microsoft login buttons with official icons
- Create OAuthService for social authentication handling
- Add OAuth callback component for redirect handling
- Update AuthService to integrate with OAuth providers
- Fix SCSS deprecation warnings (replace @import with @use)
- Add proper namespacing to prevent variable conflicts

Backend:
- Add OAuth dependencies (passport, passport-google-oauth20, passport-microsoft)
- Update package.json with required OAuth libraries
- Verify database user registration and authentication working

Configuration:
- Create oauth.config.ts for client credentials
- Add OAuth callback routes (/auth/callback/google, /auth/callback/microsoft)
- Create comprehensive OAuth setup documentation (OAUTH_SETUP.md)

Testing:
- Verify database connection and user creation/login functionality
- Test user registration, password hashing, and authentication
- Clean test data from database

--- a/smart-calendar/backend/package.json
+++ b/smart-calendar/backend/package.json
@@ -22,6 +22,9 @@
     "express-validator": "^7.2.1",
     "helmet": "^7.2.0",
     "jsonwebtoken": "^9.0.2",
+    "passport": "^0.7.0",
+    "passport-google-oauth20": "^2.0.0",
+    "passport-microsoft": "^1.0.0",
     "pg": "^8.11.3",
     "typescript": "^5.3.3"
   },
@@ -33,6 +36,8 @@
     "@types/express-validator": "^2.20.33",
     "@types/helmet": "^0.0.48",
     "@types/jsonwebtoken": "^9.0.10",
+    "@types/passport": "^1.0.16",
+    "@types/passport-google-oauth20": "^2.0.14",
     "@types/pg": "^8.10.9",
     "ts-node": "^10.9.2"
   },
