--- a/smart-calendar/package.json
+++ b/smart-calendar/package.json
@@ -32,6 +32,8 @@
     "@angular/platform-browser": "^20.3.0",
     "@angular/router": "^20.3.0",
     "@fortawesome/fontawesome-free": "^6.5.1",
+    "@google-cloud/local-auth": "^3.0.1",
+    "google-auth-library": "^10.4.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
