fix: change npm ci to npm install in netlify build
- Replace npm ci with npm install to avoid package-lock.json requirement
- Fix Netlify deployment build command

--- a/netlify.toml
+++ b/netlify.toml
@@ -1,5 +1,5 @@
 [build]
-  command = "cd smart-calendar && npm ci && npx ng build --configuration=production"
+  command = "cd smart-calendar && npm install && npx ng build --configuration=production"
   publish = "smart-calendar/dist/smart-calendar"
 
 [[redirects]]
