--- a/smart-calendar/backend/package.json
+++ b/smart-calendar/backend/package.json
@@ -9,6 +9,9 @@
     "build": "tsc",
     "migrate": "node migrate.js",
     "migrate-full": "npx ts-node src/scripts/setup-database.ts",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage",
     "postbuild": "node -e \"console.log('Build completed successfully')\""
   },
   "dependencies": {
@@ -35,10 +38,13 @@
     "@types/express": "^4.17.21",
     "@types/express-validator": "^2.20.33",
     "@types/helmet": "^0.0.48",
+    "@types/jest": "^29.5.0",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/passport": "^1.0.16",
     "@types/passport-google-oauth20": "^2.0.14",
     "@types/pg": "^8.10.9",
+    "jest": "^29.5.0",
+    "ts-jest": "^29.1.0",
     "ts-node": "^10.9.2"
   },
   "engines": {
