fix(backend): excluir testes da compilação TypeScript
Corrige erro de build no Render excluindo arquivos de teste
da compilação TypeScript. Os testes usam Jest mas não devem
ser compilados para produção.

Alterações:
- Adiciona exclusão de *.test.ts e __tests__ no tsconfig.json
- Mantém testes disponíveis para execução via Jest
- Build agora ignora arquivos de teste corretamente

Resolve: Cannot find name 'jest', 'describe', 'it', 'expect'
- Corrigir build do backend excluindo testes do TypeScript

--- a/smart-calendar/backend/package.json
+++ b/smart-calendar/backend/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "node start.js",
     "dev": "ts-node src/server.ts",
-    "build": "tsc",
+    "build": "tsc -p tsconfig.build.json",
     "migrate": "node migrate.js",
     "migrate-full": "npx ts-node src/scripts/setup-database.ts",
     "test": "jest",
