--- a/smart-calendar/backend/tsconfig.json
+++ b/smart-calendar/backend/tsconfig.json
@@ -14,5 +14,12 @@
     "moduleResolution": "node"
   },
   "include": ["src/**/*"],
-  "exclude": ["node_modules", "dist"]
+  "exclude": [
+    "node_modules",
+    "dist",
+    "**/*.test.ts",
+    "**/__tests__/**",
+    "src/**/*.test.ts",
+    "src/**/__tests__/**"
+  ]
 }
