Add test user script to package.json and verify test user exists

--- a/smart-calendar/backend/package.json
+++ b/smart-calendar/backend/package.json
@@ -9,6 +9,7 @@
     "build": "tsc -p tsconfig.build.json",
     "migrate": "node migrate.js",
     "migrate-full": "npx ts-node src/scripts/setup-database.ts",
+    "add-test-user": "npx ts-node src/scripts/add-test-user.ts",
     "test": "jest",
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage",
