Adicionar script para criação de usuário teste e comando no package.json

--- a/smart-calendar/backend/package.json
+++ b/smart-calendar/backend/package.json
@@ -10,6 +10,7 @@
     "migrate": "node migrate.js",
     "migrate-full": "npx ts-node src/scripts/setup-database.ts",
     "add-test-user": "npx ts-node src/scripts/add-test-user.ts",
+    "create-test-user": "npx ts-node src/scripts/create-test-user.ts",
     "test": "jest",
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage",
