Add database migration script

--- a/smart-calendar/backend/package.json
+++ b/smart-calendar/backend/package.json
@@ -4,7 +4,7 @@
   "description": "Backend para Smart Calendar - Sistema de agenda inteligente",
   "main": "src/server.js",
   "scripts": {
-    "start": "node start.js",
+    "start": "node migrate.js && node start.js",
     "dev": "npx ts-node src/server.ts",
     "build": "tsc",
     "migrate": "node migrate.js",
