--- a/smart-calendar/tsconfig.app.json
+++ b/smart-calendar/tsconfig.app.json
@@ -6,10 +6,7 @@
     "outDir": "./out-tsc/app",
     "types": []
   },
-  "include": [
-    "src/**/*.ts"
-  ],
-  "exclude": [
-    "src/**/*.spec.ts"
+  "files": [
+    "src/main.ts"
   ]
 }
