--- a/smart-calendar/package.json
+++ b/smart-calendar/package.json
@@ -33,6 +33,8 @@
     "@angular/router": "^18.2.0",
     "@fortawesome/fontawesome-free": "^6.5.1",
     "@google-cloud/local-auth": "^3.0.1",
+    "chart.js": "^4.5.1",
+    "date-fns": "^4.1.0",
     "google-auth-library": "^10.4.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
