--- a/smart-calendar/backend/package.json
+++ b/smart-calendar/backend/package.json
@@ -18,6 +18,7 @@
   },
   "dependencies": {
     "@types/node": "^20.0.0",
+    "axios": "^1.13.2",
     "bcryptjs": "^2.4.3",
     "compression": "^1.8.1",
     "cors": "^2.8.5",
@@ -26,6 +27,7 @@
     "express-rate-limit": "^7.1.5",
     "express-validator": "^7.2.1",
     "helmet": "^7.2.0",
+    "joi": "^18.0.2",
     "jsonwebtoken": "^9.0.2",
     "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0",
@@ -34,6 +36,7 @@
     "typescript": "^5.3.3"
   },
   "devDependencies": {
+    "@types/axios": "^0.9.36",
     "@types/bcryptjs": "^2.4.6",
     "@types/compression": "^1.8.1",
     "@types/cors": "^2.8.17",
