--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,50 @@
+# Dependencies
 node_modules/
-dist/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+package-lock.json
+pnpm-lock.yaml
+
+# Environment
 .env
-*.log
+.env.local
+.env.*.local
+*.pem
+
+# Build
+dist/
+build/
+.angular/
+.cache/
+
+# IDE
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
+
+# OS
 .DS_Store
+Thumbs.db
+
+# Logs
+logs/
+*.log
+
+# Database
+*.sqlite
+*.db
+
+# Uploads
+uploads/
+temp/
+
+# Testing
+coverage/
+.nyc_output/
+
+# PWA
+service-worker.js
+ngsw.json
