refactor: corrige problemas de lint e atualiza configurações do projeto
- Remove scripts de correção de lint obsoletos
- Atualiza configurações do Angular e TypeScript
- Corrige erros de lint em componentes, serviços e pipes
- Adiciona documentação de correções de lint
- Melhora tipagem e padrões de código em toda aplicação

--- a/smart-calendar/package.json
+++ b/smart-calendar/package.json
@@ -46,7 +46,7 @@
     "@angular/cli": "^18.2.0",
     "@angular/compiler-cli": "^18.2.0",
     "@types/jasmine": "~5.1.0",
-    "angular-eslint": "21.0.1",
+    "angular-eslint": "^18.4.3",
     "eslint": "^9.39.1",
     "jasmine-core": "~5.9.0",
     "karma": "~6.4.0",
