chore: sync pending changes

--- a/smart-calendar/backend/.env.render.example
+++ b/smart-calendar/backend/.env.render.example
@@ -2,7 +2,7 @@
 # Configure estas variáveis no dashboard do Render
 
 # Database (Auto-configurado pelo Render)
-DATABASE_URL=postgresql://user:password@host:5432/database
+DATABASE_URL=postgresql://user:xxx@host:5432/database
 
 # JWT Secrets (Gerados automaticamente)
 JWT_SECRET=your-jwt-secret-min-32-chars
