--- a/smart-calendar/tsconfig.json
+++ b/smart-calendar/tsconfig.json
@@ -3,6 +3,12 @@
 {
   "compileOnSave": false,
   "compilerOptions": {
+    "baseUrl": "./",
+    "paths": {
+      "@shared/*": [
+        "shared/*"
+      ]
+    },
     "esModuleInterop": true,
     "strict": false,
     "noImplicitOverride": true,
