chore: snapshot before frontend restructure

--- a/smart-calendar/backend/.env.render.example
+++ b/smart-calendar/backend/.env.render.example
@@ -26,3 +26,6 @@ N8N_API_KEY=your-n8n-api-key
 # OAuth (Opcional)
 GOOGLE_CLIENT_ID=your-google-client-id
 GOOGLE_CLIENT_SECRET=your-google-client-secret
+
+# Demo Mode (Opcional)
+DEMO_MODE=true
