--- a/smart-calendar/backend/tsconfig.json
+++ b/smart-calendar/backend/tsconfig.json
@@ -14,13 +14,12 @@
     "moduleResolution": "node",
     "baseUrl": "./src",
     "paths": {
-      "@shared/*": ["../../frontend/shared/*"]
+      "@shared/*": ["types/*"]
     }
   },
   "include": [
-    "src/**/*.ts", 
-    "src/types/express/index.d.ts", 
-    "../frontend/shared/types/*.ts"
+    "src/**/*.ts",
+    "src/types/express/index.d.ts"
   ],
   "exclude": [
     "node_modules",
