--- a/smart-calendar/frontend/package.json
+++ b/smart-calendar/frontend/package.json
@@ -6,7 +6,7 @@
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test",
+    "test": "ng test -- --host=127.0.0.1 --port=0 --watch=false",
     "lint": "ng lint"
   },
   "prettier": {
