--- a/smart-calendar/frontend/package.json
+++ b/smart-calendar/frontend/package.json
@@ -6,7 +6,7 @@
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test -- --host=127.0.0.1 --port=0 --watch=false",
+    "test": "ng test",
     "lint": "ng lint"
   },
   "prettier": {
@@ -42,6 +42,7 @@
     "zone.js": "~0.15.1"
   },
   "devDependencies": {
+    "@angular-devkit/build-angular": "^20.3.14",
     "@angular/build": "^20.3.14",
     "@angular/cli": "^20.3.14",
     "@angular/compiler-cli": "^20.3.16",
